--- a/data/ui/ResolutionRow.ui
+++ b/data/ui/ResolutionRow.ui
@@ -15,14 +15,13 @@
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="border_width">12</property>
+            <property name="spacing">6</property>
             <child>
               <object class="GtkLabel" id="dpi_label">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="halign">start</property>
-                <property name="label">2800 DPI</property>
-                <property name="single_line_mode">True</property>
-                <property name="track_visited_links">False</property>
+                <property name="label">0 DPI</property>
               </object>
               <packing>
                 <property name="expand">True</property>
@@ -32,11 +31,11 @@
             </child>
             <child>
               <object class="GtkLabel" id="active_label">
+                <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="halign">end</property>
-                <property name="label" translatable="yes" comments="Translators: this is used to indicate the active resolution.">Active</property>
+                <property name="label" translatable="yes" comments="Translators: this is used to indicate the active resolution.">active</property>
                 <property name="justify">right</property>
-                <property name="track_visited_links">False</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -57,36 +56,80 @@
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <child>
-              <object class="GtkFrame">
+              <object class="GtkBox">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="label_xalign">0</property>
-                <property name="shadow_type">none</property>
+                <property name="orientation">vertical</property>
+                <property name="spacing">6</property>
+                <property name="homogeneous">True</property>
                 <child>
-                  <object class="GtkAlignment">
+                  <object class="GtkScale" id="scale">
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="tooltip_text" translatable="yes">Set this resolution's dpi</property>
+                    <property name="round_digits">0</property>
+                    <property name="digits">0</property>
+                    <property name="draw_value">False</property>
+                    <property name="value_pos">bottom</property>
+                    <signal name="change-value" handler="_on_change_value" swapped="no"/>
+                    <signal name="scroll-event" handler="_on_scroll_event" swapped="no"/>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">0</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkBox">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="top_padding">12</property>
-                    <property name="bottom_padding">12</property>
-                    <property name="left_padding">12</property>
-                    <property name="right_padding">12</property>
+                    <property name="margin_left">6</property>
+                    <property name="margin_right">6</property>
+                    <property name="margin_top">6</property>
+                    <property name="margin_bottom">6</property>
+                    <property name="spacing">6</property>
+                    <property name="homogeneous">True</property>
                     <child>
-                      <object class="GtkScale" id="scale">
+                      <object class="GtkToggleButton" id="disable_button">
+                        <property name="label" translatable="yes">Disable</property>
+                        <property name="name">disable_button</property>
+                        <property name="visible">True</property>
+                        <property name="sensitive">False</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">False</property>
+                        <property name="tooltip_text" translatable="yes">Disable this resolution</property>
+                        <property name="margin_left">6</property>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">0</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkButton" id="active_button">
+                        <property name="label" translatable="yes">Set active</property>
+                        <property name="name">active_button</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <property name="tooltip_text" translatable="yes">Set this resolution’s DPI</property>
-                        <property name="round_digits">0</property>
-                        <property name="digits">0</property>
-                        <property name="draw_value">False</property>
-                        <property name="value_pos">bottom</property>
-                        <signal name="change-value" handler="_on_change_value" swapped="no"/>
-                        <signal name="scroll-event" handler="_on_scroll_event" swapped="no"/>
+                        <property name="receives_default">True</property>
+                        <property name="tooltip_text" translatable="yes">Set this resolution as active</property>
+                        <property name="margin_right">6</property>
+                        <signal name="clicked" handler="_on_active_button_clicked" swapped="no"/>
                       </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">1</property>
+                      </packing>
                     </child>
                   </object>
-                </child>
-                <child type="label_item">
-                  <placeholder/>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">2</property>
+                  </packing>
                 </child>
               </object>
             </child>
