--- a/data/ui/ResolutionsPage.ui
+++ b/data/ui/ResolutionsPage.ui
@@ -61,8 +61,8 @@
                         <property name="homogeneous">True</property>
                         <property name="layout_style">expand</property>
                         <child>
-                          <object class="GtkRadioButton" id="rate_500">
-                            <property name="label">500</property>
+                          <object class="GtkRadioButton" id="rate_125">
+                            <property name="label">125</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">False</property>
@@ -75,6 +75,21 @@
                           </packing>
                         </child>
                         <child>
+                          <object class="GtkRadioButton" id="rate_500">
+                            <property name="label">500</property>
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="receives_default">False</property>
+                            <property name="draw_indicator">False</property>
+                            <property name="group">rate_125</property>
+                          </object>
+                          <packing>
+                            <property name="expand">True</property>
+                            <property name="fill">True</property>
+                            <property name="position">1</property>
+                          </packing>
+                        </child>
+                        <child>
                           <object class="GtkRadioButton" id="rate_1000">
                             <property name="label">1000</property>
                             <property name="visible">True</property>
@@ -82,12 +97,12 @@
                             <property name="receives_default">False</property>
                             <property name="active">True</property>
                             <property name="draw_indicator">False</property>
-                            <property name="group">rate_500</property>
+                            <property name="group">rate_125</property>
                           </object>
                           <packing>
                             <property name="expand">True</property>
                             <property name="fill">True</property>
-                            <property name="position">1</property>
+                            <property name="position">2</property>
                           </packing>
                         </child>
                       </object>
