ui: regenerate all UI files using current Glade version
This does not include all changes as for some reason Glade removes some
widgets and actions.

--- a/data/ui/DeviceRow.ui
+++ b/data/ui/DeviceRow.ui
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.20.0 -->
+<!-- Generated with glade 3.40.0 -->
 <interface>
   <requires lib="gtk+" version="3.22"/>
   <template class="DeviceRow" parent="GtkListBoxRow">
-    <property name="can_focus">True</property>
+    <property name="can-focus">True</property>
     <child>
       <object class="GtkBox">
-        <property name="can_focus">False</property>
-        <property name="margin_left">6</property>
-        <property name="margin_right">6</property>
+        <property name="can-focus">False</property>
+        <property name="margin-left">6</property>
+        <property name="margin-right">6</property>
         <child>
           <object class="GtkImage" id="image">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="icon_name">input-mouse-symbolic</property>
+            <property name="can-focus">False</property>
+            <property name="icon-name">input-mouse-symbolic</property>
             <property name="icon_size">3</property>
           </object>
           <packing>
@@ -25,11 +25,11 @@
         <child>
           <object class="GtkLabel" id="title">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <property name="valign">baseline</property>
             <property name="label">Logitech G403</property>
-            <property name="single_line_mode">True</property>
-            <property name="track_visited_links">False</property>
+            <property name="single-line-mode">True</property>
+            <property name="track-visited-links">False</property>
           </object>
           <packing>
             <property name="expand">False</property>
