--- a/data/ui/MousePerspective.ui
+++ b/data/ui/MousePerspective.ui
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.20.0 -->
+<!-- Generated with glade 3.40.0 -->
 <interface>
   <requires lib="gtk+" version="3.22"/>
   <template class="MousePerspective" parent="GtkOverlay">
     <property name="visible">True</property>
-    <property name="can_focus">False</property>
+    <property name="can-focus">False</property>
     <child>
       <object class="GtkStack" id="stack">
         <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="transition_duration">400</property>
-        <property name="transition_type">slide-left-right</property>
+        <property name="can-focus">False</property>
+        <property name="transition-duration">400</property>
+        <property name="transition-type">slide-left-right</property>
         <child>
           <placeholder/>
         </child>
@@ -22,25 +22,25 @@
     <child type="overlay">
       <object class="GtkRevealer" id="notification_error">
         <property name="visible">True</property>
-        <property name="can_focus">False</property>
+        <property name="can-focus">False</property>
         <property name="halign">center</property>
         <property name="valign">start</property>
-        <property name="transition_duration">100</property>
+        <property name="transition-duration">100</property>
         <child>
           <object class="GtkFrame">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="label_xalign">0</property>
+            <property name="can-focus">False</property>
+            <property name="label-xalign">0</property>
             <child>
               <object class="GtkBox">
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
+                <property name="can-focus">False</property>
                 <child>
                   <object class="GtkLabel" id="notification_error_label">
                     <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="margin_right">30</property>
-                    <property name="margin_end">30</property>
+                    <property name="can-focus">False</property>
+                    <property name="margin-right">30</property>
+                    <property name="margin-end">30</property>
                     <property name="label" translatable="yes">Something went wrong. The device has been reset to a previous state.</property>
                     <property name="ellipsize">middle</property>
                   </object>
@@ -53,16 +53,16 @@
                 <child>
                   <object class="GtkButton" id="notification_error_close">
                     <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="focus_on_click">False</property>
-                    <property name="receives_default">True</property>
+                    <property name="can-focus">True</property>
+                    <property name="focus-on-click">False</property>
+                    <property name="receives-default">True</property>
                     <property name="relief">none</property>
                     <signal name="clicked" handler="_on_notification_error_close_clicked" swapped="no"/>
                     <child>
                       <object class="GtkImage">
                         <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="icon_name">window-close-symbolic</property>
+                        <property name="can-focus">False</property>
+                        <property name="icon-name">window-close-symbolic</property>
                         <property name="icon_size">2</property>
                       </object>
                     </child>
@@ -89,85 +89,32 @@
       </object>
     </child>
   </template>
-  <object class="GtkHeaderBar" id="_titlebar">
-    <property name="visible">True</property>
-    <property name="can_focus">False</property>
-    <property name="show_close_button">True</property>
-    <child>
-      <object class="GtkMenuButton" id="button_profile">
-        <property name="visible">True</property>
-        <property name="can_focus">True</property>
-        <property name="receives_default">True</property>
-        <property name="tooltip_text" translatable="yes">Select another profile</property>
-        <property name="popover">popover_profiles</property>
-        <child>
-          <object class="GtkLabel" id="label_profile">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="label">Profile 1</property>
-            <property name="justify">center</property>
-            <property name="track_visited_links">False</property>
-          </object>
-        </child>
-      </object>
-    </child>
-    <child type="title">
-      <object class="GtkStackSwitcher">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="stack">stack</property>
-      </object>
-    </child>
-    <child>
-      <object class="GtkButton" id="button_commit">
-        <property name="visible">True</property>
-        <property name="can_focus">True</property>
-        <property name="receives_default">True</property>
-        <property name="tooltip_text" translatable="yes">Commit the changes to the device</property>
-        <signal name="clicked" handler="_on_save_button_clicked" swapped="no"/>
-        <child>
-          <object class="GtkLabel">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="label" translatable="yes">Apply</property>
-          </object>
-        </child>
-      </object>
-      <packing>
-        <property name="pack_type">end</property>
-        <property name="position">1</property>
-      </packing>
-    </child>
-    <style>
-      <class name="titlebar"/>
-    </style>
-  </object>
   <object class="GtkPopover" id="popover_profiles">
-    <property name="can_focus">False</property>
-    <property name="border_width">2</property>
+    <property name="can-focus">False</property>
+    <property name="border-width">2</property>
     <child>
       <object class="GtkBox">
         <property name="visible">True</property>
-        <property name="can_focus">False</property>
+        <property name="can-focus">False</property>
         <property name="orientation">vertical</property>
         <property name="spacing">6</property>
         <child>
           <object class="GtkScrolledWindow">
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="shadow_type">in</property>
-            <property name="propagate_natural_width">True</property>
-            <property name="propagate_natural_height">True</property>
+            <property name="can-focus">True</property>
+            <property name="shadow-type">in</property>
+            <property name="propagate-natural-width">True</property>
+            <property name="propagate-natural-height">True</property>
             <child>
               <object class="GtkViewport">
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
+                <property name="can-focus">False</property>
                 <child>
                   <object class="GtkListBox" id="listbox_profiles">
-                    <property name="width_request">180</property>
+                    <property name="width-request">180</property>
                     <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="tooltip_text" translatable="yes">Click to switch to another profile</property>
+                    <property name="can-focus">False</property>
+                    <property name="tooltip-text" translatable="yes">Click to switch to another profile</property>
                     <signal name="row-activated" handler="_on_profile_row_activated" swapped="no"/>
                   </object>
                 </child>
@@ -184,9 +131,9 @@
           <object class="GtkButton" id="add_profile_button">
             <property name="label" translatable="yes">Add profile</property>
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">True</property>
-            <property name="tooltip_text" translatable="yes">Add a new profile to the device</property>
+            <property name="can-focus">True</property>
+            <property name="receives-default">True</property>
+            <property name="tooltip-text" translatable="yes">Add a new profile to the device</property>
             <signal name="clicked" handler="_on_add_profile_button_clicked" swapped="no"/>
           </object>
           <packing>
@@ -197,5 +144,58 @@
         </child>
       </object>
     </child>
+  </object>
+  <object class="GtkHeaderBar" id="_titlebar">
+    <property name="visible">True</property>
+    <property name="can-focus">False</property>
+    <property name="show-close-button">True</property>
+    <child type="title">
+      <object class="GtkStackSwitcher">
+        <property name="visible">True</property>
+        <property name="can-focus">False</property>
+        <property name="stack">stack</property>
+      </object>
+    </child>
+    <child>
+      <object class="GtkMenuButton" id="button_profile">
+        <property name="visible">True</property>
+        <property name="can-focus">True</property>
+        <property name="receives-default">True</property>
+        <property name="tooltip-text" translatable="yes">Select another profile</property>
+        <property name="popover">popover_profiles</property>
+        <child>
+          <object class="GtkLabel" id="label_profile">
+            <property name="visible">True</property>
+            <property name="can-focus">False</property>
+            <property name="label">Profile 1</property>
+            <property name="justify">center</property>
+            <property name="track-visited-links">False</property>
+          </object>
+        </child>
+      </object>
+    </child>
+    <child>
+      <object class="GtkButton" id="button_commit">
+        <property name="visible">True</property>
+        <property name="can-focus">True</property>
+        <property name="receives-default">True</property>
+        <property name="tooltip-text" translatable="yes">Commit the changes to the device</property>
+        <signal name="clicked" handler="_on_save_button_clicked" swapped="no"/>
+        <child>
+          <object class="GtkLabel">
+            <property name="visible">True</property>
+            <property name="can-focus">False</property>
+            <property name="label" translatable="yes">Apply</property>
+          </object>
+        </child>
+      </object>
+      <packing>
+        <property name="pack-type">end</property>
+        <property name="position">1</property>
+      </packing>
+    </child>
+    <style>
+      <class name="titlebar"/>
+    </style>
   </object>
 </interface>
