--- a/data/ui/OptionButton.ui
+++ b/data/ui/OptionButton.ui
@@ -1,53 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.20.0 -->
+<!-- Generated with glade 3.40.0 -->
 <interface>
   <requires lib="gtk+" version="3.22"/>
   <template class="OptionButton" parent="GtkButton">
     <property name="visible">True</property>
-    <property name="can_focus">True</property>
-    <property name="receives_default">True</property>
-    <property name="tooltip_text" translatable="yes">Open the configuration dialog</property>
+    <property name="can-focus">True</property>
+    <property name="receives-default">True</property>
+    <property name="tooltip-text" translatable="yes">Open the configuration dialog</property>
     <child>
       <object class="GtkBox">
         <property name="visible">True</property>
-        <property name="can_focus">False</property>
+        <property name="can-focus">False</property>
         <child>
           <object class="GtkImage">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="icon_name">emblem-system-symbolic</property>
+            <property name="can-focus">False</property>
+            <property name="icon-name">emblem-system-symbolic</property>
           </object>
           <packing>
             <property name="expand">False</property>
             <property name="fill">False</property>
-            <property name="pack_type">end</property>
+            <property name="pack-type">end</property>
             <property name="position">0</property>
           </packing>
         </child>
         <child>
           <object class="GtkSeparator">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="margin_left">6</property>
-            <property name="margin_right">6</property>
+            <property name="can-focus">False</property>
+            <property name="margin-left">6</property>
+            <property name="margin-right">6</property>
             <property name="orientation">vertical</property>
           </object>
           <packing>
             <property name="expand">False</property>
             <property name="fill">True</property>
-            <property name="pack_type">end</property>
+            <property name="pack-type">end</property>
             <property name="position">1</property>
           </packing>
         </child>
         <child>
           <object class="GtkLabel" id="label">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <property name="halign">center</property>
             <property name="label">Solid</property>
-            <property name="track_visited_links">False</property>
-            <property name="max_width_chars">20</property>
-            <property name="ellipsize">PANGO_ELLIPSIZE_END</property>
+            <property name="ellipsize">end</property>
+            <property name="max-width-chars">20</property>
+            <property name="track-visited-links">False</property>
           </object>
           <packing>
             <property name="expand">True</property>
