--- a/data/ui/ResolutionRow.ui
+++ b/data/ui/ResolutionRow.ui
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.22.1 -->
+<!-- Generated with glade 3.40.0 -->
 <interface>
   <requires lib="gtk+" version="3.22"/>
   <template class="ResolutionRow" parent="GtkListBoxRow">
     <property name="visible">True</property>
-    <property name="can_focus">False</property>
+    <property name="can-focus">False</property>
     <child>
       <object class="GtkBox">
         <property name="visible">True</property>
-        <property name="can_focus">False</property>
+        <property name="can-focus">False</property>
         <property name="orientation">vertical</property>
         <child>
           <object class="GtkBox">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="border_width">12</property>
+            <property name="can-focus">False</property>
+            <property name="border-width">12</property>
             <property name="spacing">6</property>
             <child>
               <object class="GtkLabel" id="dpi_label">
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
+                <property name="can-focus">False</property>
                 <property name="halign">start</property>
                 <property name="label">0 DPI</property>
               </object>
@@ -32,7 +32,7 @@
             <child>
               <object class="GtkLabel" id="active_label">
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
+                <property name="can-focus">False</property>
                 <property name="halign">end</property>
                 <property name="label" translatable="yes" comments="Translators: this is used to indicate the active resolution.">active</property>
                 <property name="justify">right</property>
@@ -40,7 +40,7 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
-                <property name="pack_type">end</property>
+                <property name="pack-type">end</property>
                 <property name="position">2</property>
               </packing>
             </child>
@@ -54,23 +54,23 @@
         <child>
           <object class="GtkRevealer" id="revealer">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <child>
               <object class="GtkBox">
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
+                <property name="can-focus">False</property>
                 <property name="orientation">vertical</property>
                 <property name="spacing">6</property>
                 <property name="homogeneous">True</property>
                 <child>
                   <object class="GtkScale" id="scale">
                     <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="tooltip_text" translatable="yes">Set this resolution's dpi</property>
-                    <property name="round_digits">0</property>
+                    <property name="can-focus">True</property>
+                    <property name="tooltip-text" translatable="yes">Set this resolution's dpi</property>
+                    <property name="round-digits">0</property>
                     <property name="digits">0</property>
-                    <property name="draw_value">False</property>
-                    <property name="value_pos">bottom</property>
+                    <property name="draw-value">False</property>
+                    <property name="value-pos">bottom</property>
                     <signal name="change-value" handler="_on_change_value" swapped="no"/>
                     <signal name="scroll-event" handler="_on_scroll_event" swapped="no"/>
                   </object>
@@ -83,11 +83,11 @@
                 <child>
                   <object class="GtkBox">
                     <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="margin_left">6</property>
-                    <property name="margin_right">6</property>
-                    <property name="margin_top">6</property>
-                    <property name="margin_bottom">6</property>
+                    <property name="can-focus">False</property>
+                    <property name="margin-left">6</property>
+                    <property name="margin-right">6</property>
+                    <property name="margin-top">6</property>
+                    <property name="margin-bottom">6</property>
                     <property name="spacing">6</property>
                     <property name="homogeneous">True</property>
                     <child>
@@ -96,10 +96,10 @@
                         <property name="name">disable_button</property>
                         <property name="visible">True</property>
                         <property name="sensitive">False</property>
-                        <property name="can_focus">True</property>
-                        <property name="receives_default">False</property>
-                        <property name="tooltip_text" translatable="yes">Disable this resolution</property>
-                        <property name="margin_left">6</property>
+                        <property name="can-focus">True</property>
+                        <property name="receives-default">False</property>
+                        <property name="tooltip-text" translatable="yes">Disable this resolution</property>
+                        <property name="margin-left">6</property>
                       </object>
                       <packing>
                         <property name="expand">False</property>
@@ -112,10 +112,10 @@
                         <property name="label" translatable="yes">Set active</property>
                         <property name="name">active_button</property>
                         <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="receives_default">True</property>
-                        <property name="tooltip_text" translatable="yes">Set this resolution as active</property>
-                        <property name="margin_right">6</property>
+                        <property name="can-focus">True</property>
+                        <property name="receives-default">True</property>
+                        <property name="tooltip-text" translatable="yes">Set this resolution as active</property>
+                        <property name="margin-right">6</property>
                         <signal name="clicked" handler="_on_active_button_clicked" swapped="no"/>
                       </object>
                       <packing>
