--- a/data/ui/WelcomePerspective.ui
+++ b/data/ui/WelcomePerspective.ui
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.20.0 -->
+<!-- Generated with glade 3.40.0 -->
 <interface>
   <requires lib="gtk+" version="3.22"/>
   <template class="WelcomePerspective" parent="GtkBox">
     <property name="visible">True</property>
-    <property name="can_focus">False</property>
-    <property name="border_width">20</property>
+    <property name="can-focus">False</property>
+    <property name="border-width">20</property>
     <property name="orientation">vertical</property>
     <child>
       <object class="GtkBox">
         <property name="visible">True</property>
-        <property name="can_focus">False</property>
+        <property name="can-focus">False</property>
         <property name="orientation">vertical</property>
         <property name="spacing">12</property>
         <child>
           <object class="GtkLabel">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <property name="label" translatable="yes">Welcome</property>
             <property name="justify">center</property>
-            <property name="track_visited_links">False</property>
+            <property name="track-visited-links">False</property>
             <attributes>
               <attribute name="weight" value="medium"/>
               <attribute name="size" value="50000"/>
@@ -34,10 +34,10 @@
         <child>
           <object class="GtkLabel">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <property name="label" translatable="yes" context="A subtitle under the &quot;Welcome&quot; title.">Select a device to configure it</property>
             <property name="justify">center</property>
-            <property name="track_visited_links">False</property>
+            <property name="track-visited-links">False</property>
             <style>
               <class name="dim-label"/>
             </style>
@@ -58,36 +58,36 @@
     <child>
       <object class="GtkScrolledWindow">
         <property name="visible">True</property>
-        <property name="can_focus">True</property>
+        <property name="can-focus">True</property>
         <property name="halign">center</property>
-        <property name="propagate_natural_width">True</property>
-        <property name="propagate_natural_height">True</property>
+        <property name="propagate-natural-width">True</property>
+        <property name="propagate-natural-height">True</property>
         <child>
           <object class="GtkViewport">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <child>
               <object class="GtkBox">
-                <property name="width_request">600</property>
+                <property name="width-request">600</property>
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
+                <property name="can-focus">False</property>
                 <property name="halign">center</property>
-                <property name="margin_top">32</property>
-                <property name="margin_bottom">32</property>
+                <property name="margin-top">32</property>
+                <property name="margin-bottom">32</property>
                 <property name="hexpand">False</property>
                 <property name="orientation">vertical</property>
                 <child>
                   <object class="GtkFrame">
                     <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="label_xalign">0</property>
-                    <property name="shadow_type">in</property>
+                    <property name="can-focus">False</property>
+                    <property name="label-xalign">0</property>
+                    <property name="shadow-type">in</property>
                     <child>
                       <object class="GtkListBox" id="listbox">
                         <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="tooltip_text" translatable="yes" context="A tooltip over the list of devices.">Select a device to configure it</property>
-                        <property name="selection_mode">none</property>
+                        <property name="can-focus">False</property>
+                        <property name="tooltip-text" translatable="yes" context="A tooltip over the list of devices.">Select a device to configure it</property>
+                        <property name="selection-mode">none</property>
                         <signal name="row-activated" handler="_on_device_row_activated" swapped="no"/>
                       </object>
                     </child>
@@ -115,10 +115,10 @@
   </template>
   <object class="GtkHeaderBar" id="_titlebar">
     <property name="visible">True</property>
-    <property name="can_focus">False</property>
+    <property name="can-focus">False</property>
     <property name="title" translatable="yes">Select a Device</property>
-    <property name="has_subtitle">False</property>
-    <property name="show_close_button">True</property>
+    <property name="has-subtitle">False</property>
+    <property name="show-close-button">True</property>
     <style>
       <class name="titlebar"/>
     </style>
