--- a/data/ui/Window.ui
+++ b/data/ui/Window.ui
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.20.0 -->
+<!-- Generated with glade 3.40.0 -->
 <interface>
   <requires lib="gtk+" version="3.22"/>
   <menu id="primary_menu">
@@ -14,15 +14,15 @@
 	 caused by the MousePerspective populating itself when switched to is
 	 minimal and the least disturbing. We can't populate the MousePerspective
 	 in advance because we need to know the device. -->
-    <property name="width_request">1012</property>
-    <property name="height_request">596</property>
-    <property name="can_focus">False</property>
+    <property name="width-request">1012</property>
+    <property name="height-request">596</property>
+    <property name="can-focus">False</property>
     <child>
       <object class="GtkStack" id="stack_perspectives">
         <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="transition_duration">300</property>
-        <property name="transition_type">crossfade</property>
+        <property name="can-focus">False</property>
+        <property name="transition-duration">300</property>
+        <property name="transition-type">crossfade</property>
         <child>
           <placeholder/>
         </child>
@@ -31,7 +31,7 @@
     <child type="titlebar">
       <object class="GtkStack" id="stack_titlebar">
         <property name="visible">True</property>
-        <property name="can_focus">False</property>
+        <property name="can-focus">False</property>
         <property name="hhomogeneous">False</property>
         <property name="vhomogeneous">False</property>
         <child>
