Text box can be used to set DPI (#960)
* Add dpi_entry GtkEntry objects to UI file and Python.
Find and apply closest resolution in self.resolutions.
[Needed?] Store value on textbox focus in.
[Needed?] Do not apply DPI value if the same as previous value.
DPI entry and resolution sliders affect each others' values.

* Remove pointless recursive logic.
Remove focus methods.

* Calculate DPI text box width based on max supported resolution.

* Renamed methods/signals to be consistent with current convention.

* Add a 'focus-in-event' signal to the DPI entry field.
Pass reference to ResolutionsPage when initialising ResolutionRow.
Use reference to invoke `ResolutionsPage._on_row_activated()`.
Do not toggle Revealer on DPI entry text box focus-in-event if Revealer is already expanded.
Grammar: dpi -> DPI

* Add type hints.
Prefix unused vars with underscores.
Actioned suggested import order from linter.

* Actually apply the closest res value (oops).
Apply the res value on focus-out-event.

* Toggle allow editing of DPI entry if 'disable' button clicked.

* Use set_sensitive() on DPI entry.

* rm pointless var.

* Create custom class for DPI text entry to circumvent assertion warning.
Grab DPIEntry focus when revealing ResolutionRow.
Revert import order.
Removed unused 'previous DPI value' var.
Remove 'private' convention underscore from ResolutionsPage._on_row_activate().
Remove callback method for DPI entry on ResolutionRow.
UI file uses DPIEntry.
Remove insert-text signal for DPIEntry from UI file.

* Line lengths

* Removed unused import.
Underscored unused parameter (PEP convention).

* Reverted underscore convention as to not break existing stuff.

* Use underscore convention, but also use it when invoking the method.

* Renamed handler name for ResolutionsPage to match method.

* Clarified docstring.

---------

Co-authored-by: Dan <64416644+brittle-bones@users.noreply.github.com>

--- a/data/ui/ResolutionRow.ui
+++ b/data/ui/ResolutionRow.ui
@@ -17,11 +17,20 @@
             <property name="border-width">12</property>
             <property name="spacing">6</property>
             <child>
+              <object class="DPIEntry" id="dpi_entry">
+                <property name="visible">True</property>
+                <property name="halign">start</property>
+                <signal name="activate" handler="_on_dpi_entry_activate" swapped="no"/>
+                <signal name="focus-in-event" handler="_on_dpi_entry_focus_in" swapped="no"/>
+                <signal name="focus-out-event" handler="_on_dpi_entry_focus_out" swapped="no"/>
+              </object>
+            </child>
+            <child>
               <object class="GtkLabel" id="dpi_label">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
                 <property name="halign">start</property>
-                <property name="label">0 DPI</property>
+                <property name="label">DPI</property>
               </object>
               <packing>
                 <property name="expand">True</property>
@@ -66,7 +75,7 @@
                   <object class="GtkScale" id="scale">
                     <property name="visible">True</property>
                     <property name="can-focus">True</property>
-                    <property name="tooltip-text" translatable="yes">Set this resolution's dpi</property>
+                    <property name="tooltip-text" translatable="yes">Set this resolution's DPI</property>
                     <property name="round-digits">0</property>
                     <property name="digits">0</property>
                     <property name="draw-value">False</property>
